--- a/web-extension/style/tante-jacky.css
+++ b/web-extension/style/tante-jacky.css
@@ -12,6 +12,10 @@ h1 {
   margin: 12px;
 }
 
+h2, p, button {
+  font-size: 13px;
+}
+
 section.step {
   display: contents;
   width: 300px;
@@ -28,7 +32,6 @@ section.step {
 
 .step h2 {
   grid-column: 1;
-  font-size: 13px;
   text-align: right;
   align-self: baseline;
 }
@@ -36,13 +39,11 @@ section.step {
 .step .icon {
   grid-column: 2;
   text-align: right;
-  font-size: 13px;
   align-self: baseline;
 }
 
 .step p {
   grid-column: 3;
-  font-size: 13px;
   color: gray;
   align-self: baseline;
 }
@@ -53,7 +54,6 @@ section.step {
 
 .step button {
   grid-column: 4;
-  font-size: 13px;
   align-self: baseline;
   min-width: max-content;
 }
