Refine checks, implement missing UI features
- Remove TLS check. It’s not an important enough feature to be worth
  the additional permission the extension would need.

- Add check that asks for confirmation if we’re in an incognito
  window

- popup: add support for the `running` state

- popup: add support for updating steps

- popup: add button event handling

- popup: move button next to title and value

- popup: use more casual language in messages

- Extract code into submodules

- Identity check: add support for the active tab not pointing to
  any hostname or domain, e. g. about:debugging or an empty tab

- step.js: simplify error handling code

--- a/web-extension/style/tante-jacky.css
+++ b/web-extension/style/tante-jacky.css
@@ -41,7 +41,6 @@ h2, p, button {
 
 section.step {
   display: contents;
-  width: 300px;
   border-bottom: 2px solid #eee;
 }
 
@@ -79,12 +78,13 @@ section.step {
 }
 
 .step form {
-  display: grid;
+  display: contents;
 }
 
 .step button {
   grid-column: 4;
   align-self: baseline;
+  justify-self: end;
   min-width: max-content;
 }
 
